--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <title>introduction html</title>
+  </head>
   <body>
    <img src="https://avatars.githubusercontent.com/u/90861621?v=4">
   </body>
