--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <title>introduction html</title>
   </head>
   <body>
-    <h1>header</h1>
-   <img src="https://avatars.githubusercontent.com/u/90861621?v=4">
+    <ol>
+      <li>This</li>
+      <li>Is an</li>'
+      <li>Ordered list</li>
+    </ol>
   </body>
 </html>
