--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   </head>
   <body>
     <ol>
-      <li>This</li>
-      <li>Is an</li>'
-      <li>Ordered list</li>
+      <li><a href="https://github.com>This is a link to GitHub!</a></li>
     </ol>
   </body>
 </html>
