--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <ol>
-      <li><a href="https://github.com>This is a link to GitHub!</a></li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
     </ol>
   </body>
 </html>
